Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <p><strong>(2h hace)</strong> - Un grupo de científicos ha anunciado un gran avance...</p>
                 <a href="#" class="read-more">Leer más</a>
             </article>
+
             <hr class="section-divider">
+
             <div class="article-row">
                 <article class="news-article small-article">
                     <img src="https://via.placeholder.com/300x150.png?text=Economía" alt="Foto de economía">
@@ -58,6 +60,7 @@
                     <p><strong>(4h hace)</strong> - Los mercados bursátiles abrieron al alza...</p>
                     <a href="#" class="read-more">Leer más</a>
                 </article>
+
                 <article class="news-article small-article">
                     <img src="https://via.placeholder.com/300x150.png?text=Deportes" alt="Foto de deportes">
                     <h3>Deportes: La final del campeonato se jugará este domingo</h3>
@@ -65,7 +68,9 @@
                     <a href="#" class="read-more">Leer más</a>
                 </article>
             </div>
+
             <hr class="section-divider">
+
             <article class="news-article">
                 <h2>Cultura: Exposición de arte moderno rompe récords</h2>
                 <p><strong>(6h hace)</strong> - La nueva exhibición en el Museo de Arte Contemporáneo...</p>
@@ -98,6 +103,7 @@
                     <li><a href="#"><span>3</span>Viajes: Los 5 destinos más económicos</a></li>
                 </ul>
             </div>
+
             <div class="sidebar-widget">
                 <h3>Publicidad</h3>
                 <img src="https://via.placeholder.com/300x250.png?text=Anuncio+Falso" alt="Anuncio falso">
@@ -110,16 +116,14 @@
             <div class="footer-content">
                 <div class="footer-section about">
                     <h2 class="logo-footer">Noticias al Instante</h2>
-                    <p>El portal de noticias líder en información veraz y al momento. Cubrimos los eventos que definen nuestro mundo.</p>
+                    <p>El portal de noticias líder en información veraz y al momento.</p>
                 </div>
                 <div class="footer-section links">
                     <h3>Enlaces Rápidos</h3>
                     <ul>
                         <li><a href="#">Sobre Nosotros</a></li>
-                        <li><a href="#">Equipo Editorial</a></li>
                         <li><a href="#">Política de Privacidad</a></li>
                         <li><a href="#">Términos de Uso</a></li>
-                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section social">
@@ -128,7 +132,6 @@
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
