--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <article class="news-article featured">
                 <img src="https://via.placeholder.com/600x300.png?text=Noticia+Principal" alt="Foto de noticia principal">
                 <h2>Innovación Tecnológica: La nueva IA que podría cambiar la medicina</h2>
-                <p><strong>(2h hace)</strong> - Un grupo de científicos ha anunciado un gran avance en el desarrollo de una inteligencia artificial capaz de diagnosticar enfermedades con una precisión del 99%...</p>
+                <p><strong>(2h hace)</strong> - Un grupo de científicos ha anunciado un gran avance en el desarrollo de una inteligencia artificial capaz de diagnosticar enfermedades con una precisión del 99%. Este modelo, llamado "Med-AI", ha sido entrenado con millones de casos clínicos y podría ayudar a los doctores a detectar patrones que el ojo humano no percibe...</p>
                 <a href="#" class="read-more">Leer más</a>
             </article>
 
@@ -57,14 +57,14 @@
                 <article class="news-article small-article">
                     <img src="https://via.placeholder.com/300x150.png?text=Economía" alt="Foto de economía">
                     <h3>Economía Global: Mercados reaccionan con optimismo</h3>
-                    <p><strong>(4h hace)</strong> - Los mercados bursátiles abrieron al alza esta mañana, impulsados por informes positivos...</p>
+                    <p><strong>(4h hace)</strong> - Los mercados bursátiles abrieron al alza esta mañana, impulsados por informes positivos de empleo y una inflación menor a la esperada. Analistas creen que es una señal de recuperación...</p>
                     <a href="#" class="read-more">Leer más</a>
                 </article>
 
                 <article class="news-article small-article">
                     <img src="https://via.placeholder.com/300x150.png?text=Deportes" alt="Foto de deportes">
                     <h3>Deportes: La final del campeonato se jugará este domingo</h3>
-                    <p><strong>(5h hace)</strong> - El equipo local se prepara para el partido más importante de la temporada tras una victoria... </p>
+                    <p><strong>(5h hace)</strong> - El equipo local se prepara para el partido más importante de la temporada tras una victoria en semifinales. El estadio ya reporta ventas completas para el esperado encuentro...</p>
                     <a href="#" class="read-more">Leer más</a>
                 </article>
             </div>
@@ -73,7 +73,7 @@
 
             <article class="news-article">
                 <h2>Cultura: Exposición de arte moderno rompe récords de asistencia</h2>
-                <p><strong>(6h hace)</strong> - La nueva exhibición en el Museo de Arte Contemporáneo ha capturado la atención de la ciudad. Titulada "Ecos Digitales", la muestra explora la intersección entre la tecnología y la expresión humana...</p>
+                <p><strong>(6h hace)</strong> - La nueva exhibición en el Museo de Arte Contemporáneo ha capturado la atención de la ciudad. Titulada "Ecos Digitales", la muestra explora la intersección entre la tecnología y la expresión humana, presentando obras que van desde la pintura digital hasta instalaciones interactivas...</p>
                 <a href="#" class="read-more">Leer más</a>
             </article>
 
@@ -85,9 +85,9 @@
                 <h3>Tu Resumen Local</h3>
                 
                 <div class="placeholder-content">
-                    <p>Clima en [Tu Ciudad]: 22°C Soleado</p>
-                    <p>Tráfico: Congestión moderada en la Av. Principal...</p>
-                    <p>Evento: Festival de comida este fin de semana...</p>
+                    <p id="widget-clima">Clima en [Tu Ciudad]: 22°C Soleado</p>
+                    <p id="widget-trafico">Tráfico: Congestión moderada en la Av. Principal...</p>
+                    <p id="widget-evento">Evento: Festival de comida este fin de semana...</p>
                 </div>
                 
                 <div class="overlay-lock" id="btn-ubicacion">
