--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <main class="content-area">
             
             <article class="news-article featured">
-                <img src="https://images.unsplash.com/photo-1518770660439-467616142c17?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Foto de noticia principal: IA en medicina">
+                <img src="https://picsum.photos/seed/tech/600/300" alt="Foto de noticia principal: IA en medicina">
                 <h2>Innovación Tecnológica: La nueva IA que podría cambiar la medicina</h2>
                 <p><strong>(2h hace)</strong> - Un grupo de científicos ha anunciado un gran avance en el desarrollo de una inteligencia artificial capaz de diagnosticar enfermedades con una precisión del 99%. Este modelo, llamado "Med-AI", ha sido entrenado con millones de casos clínicos y podría ayudar a los doctores a detectar patrones que el ojo humano no percibe, prometiendo revolucionar la detección temprana y el tratamiento personalizado en los próximos cinco años...</p>
                 <a href="#" class="read-more">Leer más</a>
@@ -55,14 +55,14 @@
 
             <div class="article-row">
                 <article class="news-article small-article">
-                    <img src="https://images.unsplash.com/photo-1628103138848-f5424df974b0?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Foto de economía: Mercados">
+                    <img src="https://picsum.photos/seed/economy/300/150" alt="Foto de economía: Mercados">
                     <h3>Economía Global: Mercados reaccionan con optimismo</h3>
                     <p><strong>(4h hace)</strong> - Los mercados bursátiles abrieron al alza esta mañana, impulsados por informes positivos de empleo y una inflación menor a la esperada. Analistas creen que es una señal de recuperación económica sostenida, aunque advierten sobre la volatilidad geopolítica que podría afectar los precios del petróleo en el corto plazo...</p>
                     <a href="#" class="read-more">Leer más</a>
                 </article>
 
                 <article class="news-article small-article">
-                    <img src="https://images.unsplash.com/photo-1549476465-96105c317548?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Foto de deportes: Fútbol">
+                    <img src="https://picsum.photos/seed/sports/300/150" alt="Foto de deportes: Fútbol">
                     <h3>Deportes: La final del campeonato se jugará este domingo</h3>
                     <p><strong>(5h hace)</strong> - El equipo local se prepara para el partido más importante de la temporada tras una victoria dramática en semifinales. El estadio ya reporta ventas completas para el esperado encuentro, que promete ser un choque épico entre los dos mejores equipos de la liga. El entrenador enfatiza la importancia de la afición...</p>
                     <a href="#" class="read-more">Leer más</a>
@@ -72,7 +72,7 @@
             <hr class="section-divider">
 
             <article class="news-article">
-                <img src="https://images.unsplash.com/photo-1541701494587-f84f09270e9a?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Foto de cultura: Exposición de arte">
+                <img src="https://picsum.photos/seed/art/600/200" alt="Foto de cultura: Exposición de arte">
                 <h2>Cultura: Exposición de arte moderno rompe récords de asistencia</h2>
                 <p><strong>(6h hace)</strong> - La nueva exhibición en el Museo de Arte Contemporáneo ha capturado la atención de la ciudad. Titulada "Ecos Digitales", la muestra explora la intersección entre la tecnología y la expresión humana, presentando obras que van desde la pintura digital hasta instalaciones interactivas que invitan a la reflexión sobre el futuro del arte...</p>
                 <a href="#" class="read-more">Leer más</a>
@@ -111,8 +111,7 @@
             </div>
 
             <div class="sidebar-widget">
-                <h3>Publicidad</h3>
-                <img src="https://via.placeholder.com/300x250.png?text=Anuncio+Falso" alt="Anuncio falso">
+                <img src="https://picsum.photos/seed/ad/300/250" alt="Anuncio falso">
             </div>
         </aside>
     </div>
